k8s/pricing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing
  namespace: checkout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricing
  template:
    metadata:
      labels:
        app: pricing
    spec:
      containers:
        - name: pricing
          image: pricing:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5001
          readinessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 10
            periodSeconds: 10
