k8s/checkout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: checkout
spec:
  selector:
    app: checkout
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
