k8s/gateway-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-proxy
  namespace: checkout
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
