k8s/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: checkout
spec:
  selector:
    app: inventory
  ports:
    - port: 5002
      targetPort: 5002
  type: ClusterIP
